# experience_tracker

./: .gitignore  CMakeLists.txt  README.md  compile.bat  experience.c  experience.h  functions.c  main.c  types.h  util.c  util.h
scripts/: compile.bat  compile.sh  cross_compile.sh
src/: Makefile  experience.c  experience.h  main.c  types.h  util.c  util.h
